--- a/bookstore/static/css/style.css
+++ b/bookstore/static/css/style.css
@@ -12,6 +12,33 @@
   background-color: #2E2E2E !important;
 }
 
+.ms-footer {
+  background-color: #202020;
+}
+
+.ms-footer p {
+  color: #7F7F7F;
+  font-size: 13px;
+}
+
+.ms-footer a:hover {
+  color: #6ab43e;
+  text-decoration: none;
+}
+
+.ms-footer-bottom span{ font-size: 13px;
+  line-height: 38px;
+}
+
+.ms-footer-bottom a {
+  color: #6ab43e;
+  text-decoration: none;
+}
+
+.ms-footer-bottom a:hover {
+  color: #fff;
+}
+
 /* .bg-index::before {
   content: "";
   position: absolute;
