--- a/bookstore/templates/base.html
+++ b/bookstore/templates/base.html
@@ -46,7 +46,7 @@
       {% endblock content %}
     </div>
     <!-- Footer -->
-    <section class="p-3 ms-footer bg-dark d-none d-md-block">
+    <section class="p-3 ms-footer d-none d-md-block">
       <div class="container">
         <div class="row mt-3 text-white">
           <div class="col-md-6 col-lg-6 col-xl-6 mx-auto mb-4">
