--- a/bookstore/templates/base.html
+++ b/bookstore/templates/base.html
@@ -36,6 +36,7 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ms-auto navbar-ml">
             <a class="nav-link" href="{% url 'home.about' %}">About</a>
+            <a class="nav-link" href="{% url 'books.index' %}">Books</a>
           </div>
         </div>
       </div>
