--- a/books/templates/books/show.html
+++ b/books/templates/books/show.html
@@ -12,6 +12,22 @@
         <p><b>Pages:</b> {{ template_data.book.pages }}</p>
         <p><b>Description:</b> {{ template_data.book.description|linebreaks }}</p>
         <p><b>Price:</b> ${{ template_data.book.price }}</p>
+        <p class="card-text">
+          <form method="post" action="{% url 'cart.add' id=template_data.book.id %}">
+            <div class="row">
+              {% csrf_token %}
+              <div class="col-auto">
+                <div class="input-group col-auto">
+                  <div class="input-group-text">Quantity</div>
+                  <input type="number" min="1" max="10" class="form-control quantity-input" name="quantity" value="1">
+                </div>
+              </div>
+              <div class="col-auto">
+                <button class="btn bg-dark text-white" type="submit">Add to cart</button>
+              </div>
+            </div>
+          </form>
+        </p>
       </div>
       <div class="col-md-6 mx-auto mb-3 text-center">
         <img src="{{ template_data.book.image.url }}" class="rounded img-card-300" />
